Only show/expand mandatory section/fields in LOM/LOM-ES forms. Mark with bold font collapsed section/fields with data. This prevents slow rendering on first load load of LOM/LOM-ES forms.

--- a/exe/jsui/scripts/exe.css
+++ b/exe/jsui/scripts/exe.css
@@ -32,4 +32,8 @@
   background-image: url('../jsui/extjs/resources/themes/images/default/grid/dirty.gif');
   background-position: 0 0;
   background-repeat: no-repeat;
-}​
+}
+
+fieldset.collapsed-with-data > legend > div, fieldset.collapsed-with-data > legend > div > bold > i {
+  font-weight: bold;
+}
